# dendrobates-t-azureus

./: .gitignore  Cargo.toml  README-Calibration.md  README.md  Readme.md  TODO-refactor.md  requirements.txt  stty.sh
.cargo/: config
CacheObserver/: Cargo.toml  Readme.md  run-msr-bonus.sh  run-msr-extrap.sh  run-msr-np.sh  run-msr-rpa.sh  run-msr.sh
CacheObserver/src/: lib.rs  main.rs
aes-t-tables/: Cargo.toml  README  cargo.sh
aes-t-tables/src/: lib.rs  main.rs  naive_flush_and_reload.rs
basic_timing_cache_channel/: Cargo.toml
basic_timing_cache_channel/src/: lib.rs  naive.rs  topology_aware_generic_classifier.rs
cache_info/: Cargo.toml
cache_info/src/: lib.rs
cache_side_channel/: Cargo.toml
cache_side_channel/src/: lib.rs  table_side_channel.rs
cache_slice/: Cargo.toml  README.md
cache_slice/src/: arch.rs  lib.rs  msr.rs  utils.rs
cache_utils/: Cargo.toml  Readme.md  analyse_csv.py  analyse_medians.py  analyse_reorder.py  analyse_results.sh  extract_analysis_csv.sh  generate_cores.py  remap_cores.py  run-2-thread-cal.sh  run_numa_calibration-2-20-fixed.sh  run_numa_calibration-2-20-variable.sh  run_numa_calibration-2-20.sh  run_numa_calibration-2-47-fixed.sh  run_numa_calibration-2-47.sh  run_numa_calibration-2-53.sh  run_numa_calibration-amd-old.sh  run_numa_calibration-amd-zen3.sh  run_numa_calibration-amd-zen5.sh  run_numa_calibration-amd.sh  run_numa_calibration.sh  run_numa_calibration_1500-2-47.sh  run_numa_calibration_1500-amd-old.sh  run_numa_calibration_1500-amd-zen3.sh  run_numa_calibration_3000-amd-zen3.sh  setup.sh  show_models.py
cache_utils/2T/: analyse.sh  analyse_csv.py
cache_utils/2T-opt-2020-07-23-15907ef/: analyse_csv.py
cache_utils/2T-opt-2020-07-31/: analyse_csv.py  analyse_medians.py
cache_utils/g5k-2020-60-03-dfd59064fc/: analyse.sh  analyse_csv.py  analyse_iterations.awk
cache_utils/results-05619c5/: analyse.sh  analyse_iterations.awk  cache_utils_log_citronvert.txt  cache_utils_log_cybercobaye.txt  extract_iterations.awk
cache_utils/results-05619c5/citron-vert/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  combined.ods
cache_utils/results-05619c5/cyber-cobaye/: .~lock.combined.ods#  0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv  combined.csv  combined.ods  combined.xml  iterations.txt
cache_utils/results-17e1b28/: Iterations_citron_vert.txt  cache_utils_log_citrovert.txt  extract_iterations.awk  scripts.txt
cache_utils/results-2020-04-07-5c025fb/: analyse_csv.py  analyse_iterations.awk
cache_utils/results-2020-04-07-5c025fb/citron-vert/: 0.csv  1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv
cache_utils/results-2020-04-17/: analyse_csv.py
cache_utils/results-2020-04-20/: analyse_iterations.awk
cache_utils/results-2020-04-20-26b2d22942/: analyse.sh  analyse_csv.py
cache_utils/results-5c6c607/: analyse_iterations.awk
cache_utils/results-5c6c607/citron-vert/: 0.csv  1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  combined_1.csv  combined_1.ods  combined_2.csv
cache_utils/results-ba21084/citron-vert/: 0.csv  1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv
cache_utils/results-ba21084/citron-vert-2/: 0.csv  1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv
cache_utils/src/: cache_info.rs  calibrate_2t.rs  calibration.rs  classifiers.rs  complex_addressing.rs  frequency.rs  histograms.rs  ip_tool.rs  lib.rs  main.rs  mmap.rs  numa_analysis.rs  prefetcher.rs
cache_utils/src/numa/: mod.rs  numa_impl.rs  numa_noop.rs
calibration_analysis/: Cargo.toml
calibration_analysis/src/: error_statistics.rs  lib.rs  result_migration.rs
calibration_results/: Cargo.toml
calibration_results/src/: calibration.rs  calibration_2t.rs  classifiers.rs  histograms.rs  lib.rs  numa_results.rs
calibration_results/src/numa/: numa_impl.rs  numa_noop.rs
covert_channels_benchmark/: Cargo.toml  opt_run_benchmark-2-20.sh  opt_run_benchmark-2-47.sh  opt_run_benchmark-2-53.sh  opt_run_benchmark-amd-old.sh  opt_run_benchmark-amd-zen3.sh  opt_run_benchmark-amd-zen5.sh  opt_run_benchmark_1500-2-47.sh  opt_run_benchmark_1500-amd-old.sh  opt_run_benchmark_1500-amd-zen3.sh  opt_run_benchmark_3000-amd-zen3.sh  run_benchmark-2-20.sh  run_benchmark-2-47.sh  run_benchmark-2-53.sh  run_benchmark-amd-old.sh  run_benchmark-amd-zen3.sh  run_benchmark-amd-zen5.sh  run_benchmark_1500-2-47.sh  run_benchmark_1500-amd-old.sh  run_benchmark_1500-amd-zen3.sh  run_benchmark_3000-amd-zen3.sh
covert_channels_benchmark/src/: lib.rs  main.rs
covert_channels_evaluation/: Cargo.toml
covert_channels_evaluation/src/: lib.rs
cpuid/: Cargo.toml
cpuid/src/: complex_addressing.rs  lib.rs  main.rs
dendrobates-t-azureus/: Cargo.toml
dendrobates-t-azureus/scripts/: bochsrc  qemu.sh  syms.sh
dendrobates-t-azureus/src/: allocator.rs  gdt.rs  interrupts.rs  main.rs  memory.rs
dendrobates-t-azureus/tests/: panic_test.rs
flush_flush/: Cargo.toml
flush_flush/src/: lib.rs  naive.rs
flush_reload/: Cargo.toml
flush_reload/src/: lib.rs  naive.rs
kernel/: Cargo.toml
kernel/src/: main.rs
numa_types/: Cargo.toml
numa_types/src/: lib.rs  numa_impl.rs  numa_noop.rs
numa_utils/: Cargo.toml
numa_utils/src/: numa_impl.rs  numa_noop.rs
polling_serial/: Cargo.toml
polling_serial/src/: lib.rs
prefetcher_reverse/: Cargo.toml  run-msr.sh
prefetcher_reverse/src/: ip_tool.rs  lib.rs  main.rs
results-27-02-2020-60fe76e366/: awk_scrpts.txt  gen_thresholds.awk  res.1.txt  res.2.txt
scripts/: bochs.sh  bochsrc  bochsrc-solstice  run.sh
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs
tests/: basic_boot.rs  panic_test.rs  sse_interrupt_test.rs  stack_overflow.rs
turn_lock/: Cargo.toml
turn_lock/src/: lib.rs
vga_buffer/: Cargo.toml
vga_buffer/src/: lib.rs
