[package]
name = "basic_timing_cache_channel"
version = "0.1.0"
authors = ["Guillaume DIDIER <guillaume.didier.2014@polytechnique.org>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cache_utils = { path = "../cache_utils" }
cache_side_channel = { path = "../cache_side_channel" }
calibration_results = { path = "../calibration_results", features = ["use_std", "numa"] }
nix = "0.29.0"
rand = "0.9.0"
numa_utils = { path = "../numa_utils" }
cpuid = { path = "../cpuid" }
