[package]
name = "cache_utils"
version = "0.1.0"
authors = ["Guillaume DIDIER <guillaume.didier.2014@polytechnique.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polling_serial = { path = "../polling_serial", optional = true }
vga_buffer = { path = "../vga_buffer", optional = true }
cpuid = { path = "../cpuid", default-features = false }
x86_64 = "0.15.1"
static_assertions = "1.1.0"
itertools = { version = "0.12.1", default-features = false }
atomic = "0.6.0"

nix = { version = "0.29.0", optional = true, features = ["process", "mman", "sched"] }
libc = { version = "0.2.153", optional = true }
hashbrown = { version = "0.11.2", optional = true }
turn_lock = { path = "../turn_lock", optional = true }
cache_slice = { path = "../cache_slice" }
calibration_results = { path = "../calibration_results" }
lazy_static = "1.4.0"
bitvec = { version = "1.0.1", optional = true }
numactl-sys = { path = "../../numactl-sys", optional = true }
serde = { version = "1.0.216", features = ["derive"], optional = true }
serde-big-array = { version = "0.5.1", optional = true }
chrono = { version = "0.4.39", features = ["std", "clock"], optional = true }
thiserror = { version = "2.0.7", optional = true }
rmp-serde = { version = "1.3.0", optional = true }
lzma-rs = "0.3.0"

[features]
use_std = ["nix", "itertools/use_std", "libc", "cpuid/use_std", "turn_lock", "bitvec", "thiserror", "chrono"]
no_std = ["polling_serial", "vga_buffer", "hashbrown"]
numa = ["numactl-sys", "calibration_results/numa"]
serde_support = ["serde", "rmp-serde", "serde-big-array", "calibration_results/serde_support"]

default = ["use_std", "numa", "serde_support"]

[[bin]]
name = "cache_utils"
required-features = ["use_std"]

[[bin]]
name = "numa_analysis"
required-features = ["use_std", "serde_support", "numa"]
