[package]
name = "calibration_analysis"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.216", features = ["derive"], optional = true }
serde-big-array = { version = "0.5.1", optional = true }
rmp-serde = { version = "1.3.0", optional = true }
rayon = { version = "1.10.0", optional = true }
calibration_results = { path = "../calibration_results" }
#tectonic = { version = "0.15.0" }
#pgfplots = { version = "0.5.1" } # TODO, fork it to support plot groups ? features = ["tectonic"]
pgfplots = { git = "https://github.com/GuillaumeDIDIER/pgfplots", branch = "preamble" }
zstd = "0.13.3"
num = "0.4.3"

[features]
serde_support = ["serde", "rmp-serde", "serde-big-array", "calibration_results/serde_support"]
use_std = ["rayon"]

default = ["serde_support", "use_std"]

[[bin]]
name = "numa"
required-features = ["use_std", "serde_support"]