[package]
name = "calibration_results"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.216", features = ["derive"], optional = true }
serde-big-array = { version = "0.5.1", optional = true }
rmp-serde = { version = "1.3.0", optional = true }
numa_types = { path = "../numa_types" }

[features]
serde_support = ["serde", "rmp-serde", "serde-big-array", "numa_types/serde_support"]
numa = ["numa_types/numa"]