[package]
name = "calibration_results"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.216", features = ["derive"], optional = true }
serde-big-array = { version = "0.5.1", optional = true }
rmp-serde = { version = "1.3.0", optional = true }
numa_types = { path = "../numa_types" }
cpuid = { path = "../cpuid" }
rayon = { version = "1.10.0", optional = true }
hashbrown = { version = "0.15.2", optional = true }
static_assertions = "1.1.0"
lzma-rs = { version = "0.3.0", optional = true }
num-rational = { version = "0.4.2", default-features = false }
itertools = { version = "0.14.0", default-features = false }


[features]
no_std = ["hashbrown"]
use_std = ["rayon", "lzma-rs", "num-rational/std"]
serde_support = ["serde", "rmp-serde", "serde-big-array", "numa_types/serde_support"]
numa = ["numa_types/numa"]
default = ["serde_support", "numa", "use_std"]