[package]
name = "covert_channels_benchmark"
version = "0.1.0"
authors = ["Guillaume DIDIER <guillaume.didier.2014@polytechnique.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
covert_channels_evaluation = { path = "../covert_channels_evaluation" }
cache_side_channel = { path = "../cache_side_channel" }
flush_flush = { path = "../flush_flush" }
flush_reload = { path = "../flush_reload" }
nix = "0.29.0"
basic_timing_cache_channel = { path = "../basic_timing_cache_channel" }
cache_utils = { path = "../cache_utils" }
calibration_results = { path = "../calibration_results" }
num-rational = "0.4.2"
numa_utils = { path = "../numa_utils", default-features = true }
chrono = "0.4.41"
