[package]
name = "covert_channels_evaluation"
version = "0.1.0"
authors = ["Guillaume DIDIER <guillaume.didier.2014@polytechnique.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bit_field = "0.10.2"
turn_lock = { path = "../turn_lock" }
cache_utils = { path = "../cache_utils" }
# nix = "0.28.0"
cache_side_channel = { path = "../cache_side_channel" }
