[package]
name = "dendrobates_tinctoreus_azureus"
version = "0.1.0"
authors = ["Guillaume DIDIER <guillaume.didier.2014@polytechnique.org>"]
edition = "2021"

[package.metadata.bootimage]
#run-command = ["./scripts/bochs.sh", "{}"]
run-command = ["./scripts/run.sh", "{}"]
test-args = ["qemu"]
run-args = ["bochs"]
#run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
#test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33         # (0x10 << 1) | 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x86_64 = "0.15.1"
vga_buffer = { path = "../vga_buffer" }
polling_serial = { path = "../polling_serial" }
volatile = "0.4.4"
linked_list_allocator = "0.9.0"
cache_utils = { path = "../cache_utils", features = ["no_std"], default-features = false }
arrayref = "0.3.6"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.bootloader]
version = "0.9.16"
features = ["sse", "map_physical_memory"]

#[patch.crates-io]
#bootloader = { path = "../bootloader" }

[[test]]
name = "panic_test"
harness = false

[[test]]
name = "stack_overflow"
harness = false
